--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -533,6 +533,7 @@
     <string name="connecting">Connecting</string>
     <string name="clicked_connect_to_pump" comment="26 characters max for translation">Clicked connect to pump</string>
     <string name="reservoir_value">%1$.0f / %2$d U</string>
+    <string name="low_reservoir_value">%1$.2f / %2$d U</string>
     <string name="daily_units">Daily units</string>
     <string name="pump_icon">Pump icon</string>
     <string name="view_profile">View profile</string>
